Adding DELETE method to delete a note
